@@ -56,6 +56,8 @@ Bugfixes:
 - fixed parsing of long strings (Jira APPSERVER-44)
 - fixed pausing and seeking audio-only flv files (Jira SN-17)
 - number of streams is no longer limited (Jira SN-14)
+- "NetStream.Play.Failed" is returned if a VOD stream can not be played
+  due to IO errors (Jira APPSERVER-52)
 
 
 Red5 0.6rc1 (2006-10-30)
